--- a/test-app/src/index.html
+++ b/test-app/src/index.html
@@ -2,12 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>TestApp</title>
+  <title>Star Wars</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/icons8-star-wars.svg">
 </head>
 <body>
   <app-root></app-root>
+
+  <a target="_blank" href="https://icons8.com/icons/set/star-wars">Star Wars icon</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
 </body>
 </html>
