--- a/test-app/src/index.html
+++ b/test-app/src/index.html
@@ -5,7 +5,7 @@
   <title>Star Wars</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="assets/icons8-star-wars.svg">
+  <link rel="icon" type="image/x-icon" href="assets/icons/icons8-star-wars.svg">
 </head>
 <body>
   <app-root></app-root>
